Make credits fixed when not on mobile, better visibility

--- a/css/image-watermark.css
+++ b/css/image-watermark.css
@@ -19,6 +19,11 @@
 	.image-watermark-settings { margin-right: 0; }
 }
 
+/* Larger sizes */
+@media only screen and (min-width: 959px) {
+	.df-credits { position: fixed; right: 0; margin: 0 20px; }
+}
+
 #cpt-select { margin-top: 5px; }
 .wplike-slider span.middle { width: 150px; }
 .wplike-slider span.left { margin-right: 10px; }
